--- a/manifest.json
+++ b/manifest.json
@@ -2,11 +2,16 @@
   "action": {
     "default_icon": {
       "16": "images/icon16.png",
-      "32": "images/icon48.png",
+      "48": "images/icon48.png",
       "128": "images/icon128.png"
     },
     "default_popup": "popup.html",
     "default_title": "__MSG_extName__"
+  },
+  "icons": {
+    "16": "images/icon16.png",
+    "48": "images/icon48.png",
+    "128": "images/icon128.png"
   },
   "web_accessible_resources": [
     {
@@ -24,5 +29,5 @@
   "offline_enabled": false,
   "host_permissions": ["*://*.jetblue.com/*"],
   "short_name": "Versions",
-  "version": "1.0.0"
+  "version": "1.0.1"
 }
